fix logo alignment

--- a/src/app/teamdetail/teamdetail.component.css
+++ b/src/app/teamdetail/teamdetail.component.css
@@ -48,7 +48,6 @@ li a {
 }
 
 .logo {
-  max-width: 30px;
   max-height: 60px;
   margin-right: 15px;
 }
@@ -82,13 +81,14 @@ table.table {
 }
 
 .card-img-top {
-  width: 150px;
+  width: 180px;
   border-radius: 50%;
   margin: auto;
+  margin-left:9px;
 }
 
 .logo {
-  width: 50px;
+  width: 55px;
   margin-left: 50px;
 }
 
